src/objects/Reassign__e.object
<CustomObject>
    <description>ESPSFDCQI-17884</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Approver__c</fullName>
        <label>Reassign Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Reassign</label>
    <pluralLabel>Reassign</pluralLabel>
</CustomObject>